tests/cases/compiler/continueInIterationStatement4/index.ts
for (var i in something) { //~ ERROR: Cannot find name 'something'.
  continue;
}